# hobart-svg

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dev.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_dev_py3.txt  settings.json  setup.py
.circleci/: config.yml
.github/: dependabot.yml
examples/vitra/: LICENSE.txt  README.txt  hallway1_color.hdr  vitra.mtl  vitra.pp  vitra.yml
hobart/: CHANGELOG.md  __init__.py  cli.py  core.py  geometry.py  mesh.py  svg.py
hobart_svg/: CHANGELOG.md  __init__.py  cli.py  core.py  mesh.py  svg.py  test_core.py
