[tool.poetry]
name = "hobart_svg"
version = "0.4.1"
description = "Render polygons, polylines, and mesh cross sections to SVG"
authors = ["Metabolize LLC"]
license = "BSD-2-Clause"
include = ["CHANGELOG.md"]
exclude = ["**/test_*.py"]
repository = "https://github.com/lace/hobart_svg"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
click = ">=7.0,<8.0"
hobart = "1.0.0b1"
lacecore = {version= "0.5.0", extras = ["obj"]}
#numpy = "*"
numpy = "1.21.6"
polliwog = "1.0.0b10"
svgwrite = ">=1.3.1, <2.0"
tri_again = ">=0.1.0, <0.2"
vg = ">=1.5"

[tool.poetry.dev-dependencies]
black = "20.8b1"
executor = "23.2"
flake8 = "4.0.1"
flake8-import-order = "0.18.1"
pytest = "6.1.2"

[build-system]
# Lint requires setuptools.
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
