[tool.poetry]
name = "hobart_svg"
version = "1.0.0a0"
description = "Render polygons, polylines, and mesh cross sections to SVG"
authors = ["Metabolize LLC"]
license = "BSD-2-Clause"
include = ["CHANGELOG.md"]
exclude = ["**/test_*.py"]
repository = "https://github.com/lace/hobart_svg"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
click = ">=8.1.3,<9.0"
hobart = "1.1.1"
lacecore = {version= "3.0.0a2", extras = ["obj"]}
numpy = "*"
polliwog = "3.0.0a8"
svgwrite = ">=1.3.1, <2.0"
tri-again = "2.0.0a0"
vg = ">=2.0"

[tool.poetry.dev-dependencies]
black = "23.7.0"
executor = "23.2"
flake8 = "5.0.4"
flake8-import-order = "0.18.2"
pytest = "7.2.0"

[build-system]
# Lint requires setuptools.
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
